--- a/compound.html
+++ b/compound.html
@@ -1,8 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
- Rule of 72 generalized
+  <meta charset="utf-8">
+  <title>  Going beyond the Rule of 72 </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 <p>
 The <a href=https://betterexplained.com/articles/the-rule-of-72/> Rule of 72</a> is a useful shortcut to determine the approximate the time required to double one's investment. By this rule, It takes roughly 72/r years to double your principal/investment, where <code>r</code> is the annual rate of compounding interest. So, with <code>12% p.a.</code> interest rate (compounded annually), you can double your investment in 6 (<code>72/12</code>) years. The rule can also be used to calculate the rate of interest required to double a sum of money in <code>y</code> years (<code>r = 72/y</code>).
