--- a/Going-beyond-the-Rule-of-72.html
+++ b/Going-beyond-the-Rule-of-72.html
@@ -6,34 +6,72 @@
   <title>  Going beyond the Rule of 72 </title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  body {
+    font-family: "Open Sans", sans-serif;
+  }
+  code {
+    color:None;
+  }
+  </style>
 </head>
 
 <body>
   <div class="container">
-<p>
+    <div class="page-header text-center">
+        <h1>Going beyond the Rule of 72</h1>
+    </div>
+<div class="panel-group">
+<div class="panel panel-default">
+<div class="panel-body">
+  <p>
 The <a href=https://betterexplained.com/articles/the-rule-of-72/> Rule of 72</a> is a useful shortcut to determine the approximate time required to double one's investment. By this rule, It takes roughly <code>72/r</code> years to double your principal/investment, where <code>r</code> is the annual rate of compounding interest. So, with <code>12% p.a.</code> interest rate (compounded annually), you can double your investment in 6 (<code>72/12</code>) years. The rule can also be used to calculate the rate of interest required to double a sum of money in <code>y</code> years (<code>r = 72/y</code>).
 </p>
 <p>
 This is a useful rule. But, a general rule of thumb that estimates the time required to convert an amount <code>P</code> into <code>X*P</code> would be better. In this article you will learn that.
 </p>
-
-<h3> Problem </h3>
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-body">
+<h3 class="text-center"> PROBLEM </h3>
 <p>
-Say I want to convert <code>50,000 $</code> to <code>1,000,000 $</code> at <code>8 % p.a.</code> How many years will that take?
+Say, we need to convert <code>50,000 $</code> to <code>1,000,000 $</code> at <code>8 % p.a.</code> How many years will that take?
 Our goal here is to be able to solve this problem in our head (easily).
 </p>
-
-<h3> Possible Solutions </h3>
-
-<h4> Use Rule of 72 to get a vague estimate </h4>
-
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-body">
+<h3 class="text-center"> SOLUTION </h3>
+<p>
+ First we will use our knowledge of Rule of 72, to get a rough estimate. Then we will use a clever trick to solve the problem in an elegant manner. Finally, we will use the concept of approximation to make the elegant solution feasible to be computed in our heads.
+ </p>
+<div class="panel-group">
+<div class="panel panel-default">
+  <div class="panel-heading"><h4> Use Rule of 72 to get a rough estimate </h4></div>
+  <div class="panel-body">
 <p><code>1,000,000</code> is <code>20</code> times <code>50,000</code>.</p>
 <p>
-We know that the amount will double in <code>72/8=9</code> years. At the end of <code>9</code> years, the amount is <code>100,000</code>. Crossing <code>18 (2*9)</code> years it becomes <code>200,000 = 2<sup>2</sup> * (50,000)</code>. After <code>27 (3*9)</code> years, it becomes <code>400,000 = 2<sup>3</sup> * (50,000)</code>. Notice the pattern that after n*9 years the total amount is <code>2<sup>n</sup> * (50,000)</code>. We know that <code>20</code> lies between <code>2<sup>4</sup> (16)</code> and <code>2<sup>5</sup> (32)</code>. In <code>9*4</code> years our amount grows to <code>800,000 (16*50,000)</code> and  in <code>9*5</code> years our amount grows to <code>1,600,000 (32*50,000)</code>. <code>1,00,000</code> falls in between <code>800,000</code> and <code>1,600,000</code>. So the time it takes to get a million dollars will be anywhere between <code>36 (9**4)</code> and <code>45 (9**5)</code> years. To get a more accurate time we can use simple interest calculation. Thge simple interest for <code>800,000</code> is <code>64,000 (0.08 * 800,000) </code>. Thrice the Simple Interest is approximately <code>200,000</code> (<code>196,000</code> exactly).Compound interest for this three years will be more than Simple Interest as the interest earns interest in compounding. So we get a million in <code>36+3</code> years. The exact value after <code>39</code> years is <code>1,005,764.88</code> (which you can calculate <a href="https://financialmentor.com/calculator/compound-interest-calculator"> here </a>). We need to be careful that this small difference of <code>5764.88 $</code>(<code>1,005,764.88-1,00,000</code>) will grow to a large amount when compounding for more years. The problem with this approach is that the estimated <code>36-45</code> has a range/gap of <code>11</code> years. This gap widens as the rate of interest gets smaller. We need a better solution that can reduce this range/gap.
+We know that the amount will double in <code>72/8=9</code> years. At the end of <code>9</code> years, the amount is <code>100,000</code>. Crossing <code>18 (2*9)</code> years it becomes <code>200,000 = 2<sup>2</sup> * (50,000)</code>. After <code>27 (3*9)</code> years, it becomes <code>400,000 = 2<sup>3</sup> * (50,000)</code>.
 </p>
-<h3> A clever solution </h3>
+<p>
+  Notice the pattern that after <code>n*9</code> years the total amount is <code>2<sup>n</sup> * (50,000)</code>. We know that <code>20</code> lies between <code>2<sup>4</sup> (16)</code> and <code>2<sup>5</sup> (32)</code>. In <code>9*4</code> years our amount grows to <code>800,000 (16*50,000)</code> and  in <code>9*5</code> years our amount grows to <code>1,600,000 (32*50,000)</code>. <code>1,00,000</code> falls in between <code>800,000</code> and <code>1,600,000</code>. So the time it takes to get a million dollars will be anywhere between <code>36 (9**4)</code> and <code>45 (9**5)</code> years.
+</p>
+<p>
+  To get a more accurate estimate we can use simple interest calculation. The Simple Interest for <code>800,000</code> is <code>64,000 (0.08 * 800,000) </code>. Thrice the Simple Interest is approximately <code>200,000</code> (<code>196,000</code> exactly). Compound interest for this three years will be more than Simple Interest as the interest earns interest while compounding. So we get a million in <code>36+3</code> years.
+</p>
+<p>
+  The exact value after <code>39</code> years is <code>1,005,764.88</code> (which you can calculate <a href="https://financialmentor.com/calculator/compound-interest-calculator"> here </a>). We need to be careful that this small difference of <code>5764.88 $</code>(<code>1,005,764.88-1,00,000</code>). It will grow to a large amount when compounding for more years. That aside, the problem with this approach is that the estimated <code>36-45</code> years has a range/gap of <code>11</code> years. This gap widens as the rate of interest gets smaller. We need a better solution that can reduce this range/gap.
+</p>
+</div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading"><h4>An elegant solution</h4></div>
+<div class="panel-body">
 <p>
 Just as we have a rule to double our money, we also have a rule to triple our money. It takes <code>110/r</code> years to triple. To make our money <code>4</code> times initial, it takes <code>139/r</code> years. To make it <code>5</code> times it takes <code>161/r</code> years and so on ... to make it <code>20</code> times it takes <code>300/r</code> years. We need to remember 20 rules to be able to estimate the number of years for multiplying our principal for up to 20 times. To calculate for a multiple of up to 100 times, we should remember 100 such  rules. Remembering so many numbers is a challenge for many. Luckily, there is a neat mathematical trick that eases the load on our memory.
 </p>
@@ -81,7 +119,7 @@ Now, lets apply the steps to our problem.
   <li>The desired/final amount (<code>1,000,000</code>) is <code>20</code> times the initial/principal amount (<code>50,000</code>).<code>20=2<sup>2</sup>*5<sup>1</sup></code>.</li>
 <li> For factor <code>2<sup>2</sup></code>, we apply <strong>Rule of 72</strong>, and multiply the result by <code>2</code>. <code>72/8=9</code> and <code>9*2=18</code> years.</li>
   <li> We repeat it for <code>5<sup>1</sup></code>.For factor <code>5<sup>1</sup></code>, we apply <strong>Rule of 240</strong>, and multiply the result by <code>1</code>.<code>161/8=20</code> (approx) and <code>20*1=20</code> years.</li>
-<li> So our answer is <code>18+20=38</code> years.The accurate answer is a touch above <code>37.5</code> years.</li>
+<li> So our answer is <code>18+20=38</code> years.The accurate answer is a touch below <code>38</code> years.</li>
 </ol>
 </p>
 <p>
@@ -94,7 +132,11 @@ becomes
 <code>Required years, Y=(<strong>Rule for prime1</strong>) * a + (<strong>Rule for prime2</strong>) * b +(<strong>Rule for prime3</strong>) * c + (<strong>Rule for prime4</strong>) * d + ...</code>
 </br>
 </p>
-<h3> The faster solution </h3>
+</div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading"><h4> The faster solution </h4></div>
+<div class="panel-body">
 <p>
 The above solution is quite accurate, then there is the problem of remembering 15 rules for multipliers till 50. We can forego a bit of accuracy by using an approximation trick. The trick is to approximate the multiplier (<code>X</code>) using a small set of prime factors rather than all. We will try to approximate any <code>X</code> as a product of prime factors <code>2,3,5,</code> and <code>7</code>. 53 as approximately 56(<code>2<sup>3</sup><sub>*</sub>7=56</code>),  29 as 30(<code>2<sup>1</sup><sub>*</sub>3<sup>1</sup><sub>*</sub>5<sup>1</sup>=30</code>) and so on.
 Now we need to remember only 4 rules (<strong> Rule of 72, Rule of 110, Rule of 161</strong> and <strong>Rule of 195</strong>) to get a good approximation.
@@ -109,12 +151,17 @@ Now we need to remember only 4 rules (<strong> Rule of 72, Rule of 110, Rule of 
  <code>2,650,000 $</code> is <code>53 (2,650,000/50,000=53)</code> times <code>50,000 $</code>.
  Taking 53 as approximately 56 results in <code>56=2<sup>3</sup><sub>*</sub>7</code>.
  Required years, <code>Y=(<strong>Rule of 72</strong>) * 3 + (<strong>Rule of 195</strong>) * 1</code>.<code>Y=(72/6) * 3 + (195/6) * 1=12*3 + 32.5*1 = 68.5</code>.
- 
-
-
-
+ </br>
+ At the end of <code>68.5</code> years the actual value is <code>2,628,868.38 $</code>, which is close to our desired value.
+ </br>
+ <p>
+With a little bit of practise you should be able to work out the answer in your head. No pen or paper needed.
 </p>
 </p>
+</p>
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
