Minimal index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-:hw :)
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>  Going beyond the Rule of 72 </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  body {
+    font-family: "Open Sans", sans-serif;
+  }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+  <a href="https://kishorepv.github.io/Going-beyond-the-Rule-of-72.html"> Going beyond the Rule of 72</a>
+</div>
+</body>
+</html>
