--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     font-family: "Open Sans", sans-serif;
   }
   </style>
+  <base target="_blank">
 </head>
 
 <body>
   <div class="container">
-  <a href="https://kishorepv.github.io/Going-beyond-the-Rule-of-72.html"> Going beyond the Rule of 72</a>
+  <a href="https://kishorepv.github.io/Going-beyond-the-Rule-of-72.html"> Going beyond "Rule of 72"</a>
 </div>
 </body>
 </html>
